# mlproduction

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample.ipynb
runtime/: sample.ipynb  ultils.py
scripts/: cloud_install_deps.sh  cloud_setup.py  cloud_setup.sh  cloud_setup_dep.sh  cloud_setup_pip_dep.sh  cloud_sync_code.sh  configs.py  gdown.sh  local_push.cmd
src/dataloaders/: hallu_dataloader.py  ultils.py
src/model_cross_attn_hallu/: cross_attention_hallucinator.py
src/model_sentence_classifier/: setence_classifier.py
src/model_sentence_classifier.py/: setence_classifier.py
src/models/: cross_attention_hallucinator.py  preprop_svm.py  svm.py
