[project]
name = "mlproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "isort>=7.0.0",
    "lightning>=2.6.0",
    "markupsafe==3.0.2",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "torch",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[tool.uv]
extra-index-url = [
    "https://pypi.org/simple"
]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", marker = "platform_system == 'Windows'"},
    { index = "torch-gpu", marker = "platform_system == 'Linux'"},
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
