[project]
name = "mlproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "isort>=6.0.0",
    "lightning>=2.5.0",
    "markupsafe==3.0.2",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.0",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
]

[tool.uv]
extra-index-url = [
    "https://pypi.org/simple"
]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", marker = "platform_system == 'Windows'"},
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
