[project]
name = "mlproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy>=1.26.4, <2.0.0",
    "pandas>=2.2.2, <2.2.3",
    "scikit-learn>=1.5.2, <1.6.0",
    "isort>=5.13.0",
    "lightning>=2.4.0",
    "markupsafe==3.0.2",
    "pydantic-settings>=2.4.0",
    "torch>=2.4.0",
    "tqdm>=4.66.0",
    "transformers>=4.44.0",
]

[tool.uv]
extra-index-url = [
    "https://pypi.org/simple"
]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", marker = "platform_system == 'Windows'"},
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
